--- a/custom/kind-knative-cluster.yaml
+++ b/custom/kind-knative-cluster.yaml
@@ -3,13 +3,13 @@ apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
 - role: worker
   extraMounts:
-    - hostPath: ./logs
-      containerPath: /shared/logs
+    - hostPath: /mnt/ssdsata/shared
+      containerPath: /media/shared
 - role: control-plane
   image: kindest/node:v1.27.1
   extraMounts:
-  - hostPath: /media/giovanni/ssdsata/log
-    containerPath: /shared/logs
+  - hostPath: /mnt/ssdsata/shared
+    containerPath: /media/shared
   extraPortMappings:
   - containerPort: 31080
     hostPort: 80
