--- a/custom/config-default.yaml
+++ b/custom/config-default.yaml
@@ -4,16 +4,16 @@ metadata:
   name:  config-defaults
   namespace:  knative-serving
 data:
-  revision-timeout-seconds: "1200"
-  max-revision-timeout-seconds: "1200"
-  revision-cpu-request: "500m"
-  revision-memory-request: "100M"
-  revision-ephemeral-storage-request: "100M"
-  revision-cpu-limit: "500m"
-  revision-memory-limit: "100M"
-  revision-ephemeral-storage-limit: "200M"
+  revision-timeout-seconds: "120"
+  max-revision-timeout-seconds: "120"
+  revision-cpu-request: "1500m"
+  revision-memory-request: "256M"
+  revision-ephemeral-storage-request: "256M"
+  revision-cpu-limit: "1500m"
+  revision-memory-limit: "1024M"
+  revision-ephemeral-storage-limit: "512M"
   container-name-template: "user-container"
-  container-concurrency: "3"
-  container-concurrency-max-limit: "5"
-  allow-container-concurrency-zero: "false"
-  enable-service-links: "false"
+  container-concurrency: "4"
+  container-concurrency-max-limit: "12"
+  allow-container-concurrency-zero: "true"
+  enable-service-links: "true"
